# Lumina

./: .gitignore  Photo Album.bat  Photo Album.lnk  Photo Album.vbs  README.md  RETROSPECTIVE.md  build.bat  build.js  electron-builder.yml  favorites-bug-review-report.json  launcher.js  launcher.vbs  package-lock.json  package.json  review-report.json  setup-dev.bat  start.bat  test.js  tsconfig.json
scripts/: build-installer.sh
src/: tsconfig.renderer.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  db.rs  main.rs  models.rs
src-tauri/src/repos/: albums.rs  favorites.rs  images.rs  mod.rs  profiles.rs  settings.rs  trash.rs
src-tauri/src/services/: mod.rs  scanner.rs  theme.rs  thumbnails.rs
src/main/: index.ts
src/main/db/: albums-repo.ts  connection.ts  db-helpers.ts  favorites-repo.ts  images-repo.ts  profiles-repo.ts  settings-repo.ts  sql.js.d.ts  trash-repo.ts
src/main/ipc/: index.ts
src/main/services/: scanner.ts  theme.ts  thumbnails.ts
src/preload/: index.ts
src/renderer/: index.html  index_clean.html  index_cn.html
src/renderer/scripts/: api.js  app.js  constants.js  context-menu.js  discover.js  icons.js  lightbox.js  modal.js  renderer.js  settings.js  state.js  theme-extractor.js  toast.js  utils.js
src/renderer/styles/: layout.css  theme.css  win11-vars.css
